--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,308 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+@import url(./reset.css);
+@import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@500;700&display=swap");
+body {
+  background: #EFFAFA;
+  font-family: "League Spartan", sans-serif;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+h1,
+h2,
+h3,
+h4 {
+  font-weight: 700;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+.pattern {
+  position: absolute;
+  inset-inline: 0;
+  inset-block: 0 auto;
+  background: #5CA5A5;
+}
+.pattern > picture {
+  inline-size: 100%;
+  block-size: 9.75rem;
+}
+.pattern > picture > img {
+  inline-size: 100%;
+  block-size: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+main {
+  max-inline-size: 69.375rem;
+  margin-inline: auto;
+  padding-block: 7.5rem;
+  position: relative;
+  z-index: 99;
+}
+main > .filterOptions {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+  border-radius: 5px;
+  background: #FFF;
+  box-shadow: 0px 15px 20px -5px rgba(13, 113, 130, 0.15);
+  block-size: 4.5rem;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  flex-flow: wrap;
+  padding-inline: 2.5rem;
+  padding-block: 1.25rem;
+  transition: all 0.3s ease;
+}
+main > .filterOptions.hidden {
+  opacity: 0;
+  pointer-events: none;
+  translate: 0px -20px;
+}
+main > .filterOptions.visible {
+  opacity: 1;
+  pointer-events: auto;
+  translate: 0px 0px;
+}
+main > .filterOptions > .filterOption {
+  display: inline-flex;
+  gap: 0.6875rem;
+  border-radius: 4px;
+  overflow: hidden;
+  background: rgba(92, 165, 165, 0.1725490196);
+}
+main > .filterOptions > .filterOption > p {
+  padding-inline: 0.5rem 0;
+  padding-block: 0.25rem;
+  color: #5CA5A5;
+  font-size: 1rem;
+  font-weight: 700;
+  line-height: 1.5rem;
+  letter-spacing: -0.123px;
+}
+main > .filterOptions > .filterOption > span {
+  background-color: #5CA5A5;
+  display: grid;
+  place-items: center;
+  inline-size: 2rem;
+  cursor: pointer;
+}
+main > .filterOptions > .filterOption > span:hover {
+  background: #2B3939;
+}
+main > .jobs {
+  padding-block-start: 2.5rem;
+  inline-size: 100%;
+  display: grid;
+  gap: 1.5rem;
+}
+main > .jobs > .job {
+  border-radius: 5px;
+  inline-size: 100%;
+  border-inline-start: 4px solid transparent;
+  padding-inline: 2.5rem;
+  padding-block: 2rem;
+  gap: 1.5rem;
+  background: #FFF;
+  box-shadow: 0px 15px 20px -5px rgba(13, 113, 130, 0.15);
+  display: flex;
+  align-items: center;
+}
+main > .jobs > .job.true {
+  border-inline-start: 4px solid #5CA5A5;
+}
+main > .jobs > .job > .img {
+  border-radius: 50%;
+  inline-size: 5.5rem;
+  block-size: 5.5rem;
+}
+main > .jobs > .job > .img > img {
+  inline-size: 100%;
+  block-size: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+main > .jobs > .job > .details {
+  display: flex;
+  flex-flow: column;
+  gap: 1rem;
+}
+main > .jobs > .job > .details > .detailsHeader {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+}
+main > .jobs > .job > .details > .detailsHeader > .companyName {
+  color: #5CA5A5;
+  font-size: 1.125rem;
+}
+main > .jobs > .job > .details > .detailsHeader > .isNew {
+  border-radius: 12px;
+  background: #5CA5A5;
+  color: #FFF;
+  padding-block: 0.4375rem 0.1875rem;
+  padding-inline: 0.5rem;
+}
+main > .jobs > .job > .details > .detailsHeader > .isNew.false {
+  display: none;
+}
+main > .jobs > .job > .details > .detailsHeader > .isFeatured {
+  border-radius: 12px;
+  background: #2B3939;
+  color: #FFF;
+  padding-block: 0.4375rem 0.1875rem;
+  padding-inline: 0.5rem;
+}
+main > .jobs > .job > .details > .detailsHeader > .isFeatured.false {
+  display: none;
+}
+main > .jobs > .job > .details > .jobType {
+  display: flex;
+  gap: 0.9375rem;
+  align-items: center;
+  color: #7C8F8F;
+}
+main > .jobs > .job > .details > .jobType > .circle {
+  display: inline-block;
+  inline-size: 4px;
+  aspect-ratio: 1;
+  background-color: #B7C4C4;
+  border-radius: 50%;
+}
+main > .jobs > .job > .options {
+  display: flex;
+  align-items: center;
+  flex-flow: wrap;
+  gap: 1rem;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+  margin-inline-start: auto;
+}
+main > .jobs > .job > .options > .option {
+  color: #5CA5A5;
+  font-size: 1rem;
+  font-weight: 700;
+  line-height: 1.5rem;
+  letter-spacing: -0.123px;
+  border-radius: 4px;
+  background: rgba(92, 165, 165, 0.1529411765);
+  padding-block: 0.3125rem 0.1875rem;
+  padding-inline: 0.5625rem;
+  cursor: pointer;
+}
+main > .jobs > .job > .options > .option:hover {
+  background: #5ca5a5;
+  color: #FFF !important;
+}
+
+.loaderContainer {
+  block-size: 300px;
+  inline-size: 100%;
+  display: grid;
+  place-items: center;
+}
+
+.loader {
+  width: 80px;
+  height: 50px;
+  position: relative;
+}
+
+.loader-text {
+  position: absolute;
+  top: 0;
+  padding: 0;
+  margin: 0;
+  color: #C8B6FF;
+  animation: text_713 3.5s ease both infinite;
+  font-size: 0.8rem;
+  letter-spacing: 1px;
+}
+
+.load {
+  background-color: #9A79FF;
+  border-radius: 50px;
+  display: block;
+  height: 16px;
+  width: 16px;
+  bottom: 0;
+  position: absolute;
+  transform: translateX(64px);
+  animation: loading_713 3.5s ease both infinite;
+}
+
+.load::before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: #D1C2FF;
+  border-radius: inherit;
+  animation: loading2_713 3.5s ease both infinite;
+}
+
+@keyframes text_713 {
+  0% {
+    letter-spacing: 1px;
+    transform: translateX(0px);
   }
-  to {
-    transform: rotate(360deg);
+  40% {
+    letter-spacing: 2px;
+    transform: translateX(26px);
+  }
+  80% {
+    letter-spacing: 1px;
+    transform: translateX(32px);
+  }
+  90% {
+    letter-spacing: 2px;
+    transform: translateX(0px);
+  }
+  100% {
+    letter-spacing: 1px;
+    transform: translateX(0px);
   }
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+@keyframes loading_713 {
+  0% {
+    width: 16px;
+    transform: translateX(0px);
+  }
+  40% {
+    width: 100%;
+    transform: translateX(0px);
+  }
+  80% {
+    width: 16px;
+    transform: translateX(64px);
+  }
+  90% {
+    width: 100%;
+    transform: translateX(0px);
+  }
+  100% {
+    width: 16px;
+    transform: translateX(0px);
   }
 }
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
+@keyframes loading2_713 {
+  0% {
+    transform: translateX(0px);
+    width: 16px;
+  }
+  40% {
+    transform: translateX(0%);
+    width: 80%;
+  }
+  80% {
+    width: 100%;
+    transform: translateX(0px);
+  }
+  90% {
+    width: 80%;
+    transform: translateX(15px);
+  }
+  100% {
+    transform: translateX(0px);
+    width: 16px;
+  }
+}/*# sourceMappingURL=App.css.map */
