--- a/src/App.scss
+++ b/src/App.scss
@@ -19,9 +19,10 @@ h4{
     inset-inline: 0;
     inset-block: 0 auto;
     background: #5CA5A5 ;
+    block-size: toRem(156);
     >picture{
         inline-size: 100%;
-        block-size: toRem(156);
+        block-size: 100%;
         >img{
             inline-size: 100%;
             block-size: 100%;
@@ -37,12 +38,15 @@ main{
 
     position: relative;
     z-index: 99;
+    @media (width<750px){
+      inline-size: min(327px, 95%);
+    }
     >.filterOptions{
         user-select: none;
         border-radius: 5px;
         background: #FFF;
         box-shadow: 0px 15px 20px -5px rgba(13, 113, 130, 0.15);
-        block-size: toRem(72);
+        min-block-size: toRem(72);
         display: flex;
         align-items: center;
         gap: toRem(16);
@@ -93,109 +97,143 @@ main{
         }
     }
     >.jobs{
-        padding-block-start: toRem(40);
-        inline-size: 100%;
-        display: grid;
-        gap: toRem(24);
-        >.job{
-            &.true{
-                border-inline-start: 4px solid #5CA5A5;
-            }
-            border-radius: 5px;
-            inline-size: 100%;
-            border-inline-start: 4px solid transparent;
-            padding-inline: toRem(40);
-            padding-block: toRem(32);
-            gap: toRem(24);
-            background: #FFF;
-            box-shadow: 0px 15px 20px -5px rgba(13, 113, 130, 0.15);
-            display: flex;
-            align-items: center;
-            >.img{
-                border-radius: 50%;
-                inline-size: toRem(88);
-                block-size: toRem(88);
-                >img{
-                    inline-size: 100%;
-                    block-size: 100%;
-                    object-fit: cover;
-                }
-            }
-            >.details{
-                display: flex;
-                flex-flow: column;
-                gap: toRem(16);
-                >.detailsHeader{
-                    display: flex;
-                    gap: toRem(16);
-                    align-items: center;
-                    >.companyName{
-                        color: #5CA5A5;
-                        font-size: toRem(18);
-                    }
-                    >.isNew{
-                        border-radius: 12px;
-                        background: #5CA5A5;
-                        color: #FFF;
-                        padding-block: toRem(7) toRem(3);
-                        padding-inline: toRem(8);
-                        &.false{
-                            display: none;
-                        }
-                    }
-                    >.isFeatured{
-                        border-radius: 12px;
-                        background: #2B3939;
-                        color: #FFF;
-                        padding-block: toRem(7) toRem(3);
-                        padding-inline: toRem(8);
-                        &.false{
-                            display: none;
-                        }
-                    }
-                }
-                >.jobType{
-                    display: flex;
-                    gap: toRem(15);
-                    align-items: center;
-                    color: #7C8F8F;
-                    >.circle{
-                        display: inline-block;
-                        inline-size: 4px;
-                        aspect-ratio: 1;
-                        background-color: #B7C4C4;
-                        border-radius: 50%;
-                    }
-                }
-            }
-            >.options{
-                display: flex;
-                align-items: center;
-                flex-flow: wrap;
-                gap: toRem(16);
-                user-select: none;
-                margin-inline-start: auto;
-                >.option{
-                    color: #5CA5A5;
-                    font-size: toRem(16);
-                    font-weight: 700;
-                    line-height: toRem(24);
-                    letter-spacing: -0.123px;
+      padding-block-start: toRem(40);
+      inline-size: 100%;
+      display: grid;
+      gap: toRem(24);
+      @media (width<750px){
+        gap: toRem(40);
+      }
+      >.job{
+        position: relative;
+          &.true{
+              border-inline-start: 4px solid #5CA5A5;
+          }
+          border-radius: 5px;
+          inline-size: 100%;
+          border-inline-start: 4px solid transparent;
+          padding-inline: toRem(40);
+          padding-block: toRem(32);
+          background: #FFF;
+          box-shadow: 0px 15px 20px -5px rgba(13, 113, 130, 0.15);
+          display: flex;
+          align-items: center;
+          gap: toRem(24);
+          @media (width<750px){
+            padding-inline: toRem(24);
+            padding-block: toRem(32) toRem(24);
+            
+            flex-direction: column;
+            align-items: flex-start;
+            gap: toRem(0);
+          }
+          >.img{
+              flex: 0 0 auto;
 
-                    border-radius: 4px;
-                    background: #5ca5a527;
-                    padding-block: toRem(5) toRem(3);
-                    padding-inline: toRem(9);
-                    cursor: pointer;
-                    &:hover{
-                        background: #5ca5a5;
-                        color: #FFF !important;
+              border-radius: 50%;
+              inline-size: toRem(88);
+              block-size: toRem(88);
+              @media(width<750px){
+                position: absolute;
+                inset-block-start: toRem(calc(48 / 2)) * -1;
+                inline-size: toRem(48);
+                block-size: toRem(48  );
+              }
+              >img{
+                  inline-size: 100%;
+                  block-size: 100%;
+                  object-fit: cover;
+              }
+          }
+          >.details{
+            flex: 0 0 auto;
+            
+            display: flex;
+            flex-flow: column;
+            gap: toRem(16);
+
+            @media(width<750px){
+              inline-size: 100%;
+              padding-block-end: toRem(15);
+              border-block-end: solid 1px #B7C4C4;
+            }
+            >.detailsHeader{
+                display: flex;
+                gap: toRem(16);
+                align-items: center;
+                >.companyName{
+                    color: #5CA5A5;
+                    font-size: toRem(18);
+                }
+                >.isNew{
+                    border-radius: 12px;
+                    background: #5CA5A5;
+                    color: #FFF;
+                    padding-block: toRem(7) toRem(3);
+                    padding-inline: toRem(8);
+                    &.false{
+                        display: none;
+                    }
+                }
+                >.isFeatured{
+                    border-radius: 12px;
+                    background: #2B3939;
+                    color: #FFF;
+                    padding-block: toRem(7) toRem(3);
+                    padding-inline: toRem(8);
+                    &.false{
+                        display: none;
                     }
                 }
             }
+            >.jobType{
+                display: flex;
+                gap: toRem(15);
+                align-items: center;
+                color: #7C8F8F;
+                >.circle{
+                    display: inline-block;
+                    inline-size: 4px;
+                    aspect-ratio: 1;
+                    background-color: #B7C4C4;
+                    border-radius: 50%;
+                }
+            }
+          }
+        >.options{
+          display: flex;
+          align-items: center;
+          flex-flow: wrap;
+          gap: toRem(16);
+          user-select: none;
+          margin-inline-start: auto;
+          @media (width<750px){
+            margin: 0;
+            padding-block-start: toRem(15);
+          }
+          >.option{
+            color: #5CA5A5;
+            font-size: toRem(16);
+            font-weight: 700;
+            line-height: toRem(24);
+            letter-spacing: -0.123px;
+
+            border-radius: 4px;
+            background: #5ca5a527;
+            padding-block: toRem(5) toRem(3);
+            padding-inline: toRem(9);
+            cursor: pointer;
+            &:hover{
+              background: #5ca5a5;
+              color: #FFF !important;
+            }
+          }
         }
-    }
+      }
+  }
 }
+
+// animation styles
 
 .loaderContainer{
     block-size: 300px;
