--- a/src/App.css
+++ b/src/App.css
@@ -107,6 +107,7 @@ main > .jobs {
 }
 main > .jobs > .job {
   position: relative;
+  transition: all 1s ease;
   border-radius: 5px;
   inline-size: 100%;
   border-inline-start: 4px solid transparent;
@@ -120,6 +121,14 @@ main > .jobs > .job {
 }
 main > .jobs > .job.true {
   border-inline-start: 4px solid #5CA5A5;
+}
+main > .jobs > .job.in {
+  opacity: 1;
+  transform: translatex(0%);
+}
+main > .jobs > .job.out {
+  opacity: 0;
+  transform: translatex(-30px);
 }
 @media (width < 750px) {
   main > .jobs > .job {
