--- a/src/App.scss
+++ b/src/App.scss
@@ -106,8 +106,17 @@ main{
       }
       >.job{
         position: relative;
+        transition: all 1s ease;
           &.true{
               border-inline-start: 4px solid #5CA5A5;
+          }
+          &.in{
+            opacity: 1;
+            transform: translatex(0%);
+          }
+          &.out{
+            opacity: 0;
+            transform: translatex(- 30px);
           }
           border-radius: 5px;
           inline-size: 100%;
